openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tekton-demo
  name: tekton-demo
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: tekton-demo
