openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: tekton-demo
  name: tekton-demo
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: tekton-demo
    weight: 100
